onlyargs_derive/compile_tests/positional_single_string.stderr
error: #[positional] can only be used on `Vec<T>`
 --> compile_tests/positional_single_string.rs:4:11
  |
4 |     rest: String,
  |           ^^^^^^
