onlyargs_derive/compile_tests/positional_single_string.rs
#[derive(Debug, onlyargs_derive::OnlyArgs)]
struct Args {
    #[positional]
    rest: String,
}

fn main() {}
